opam-version: "2.0"
maintainer:   ["David Kaloper Meršinjak <dk505@cam.ac.uk>"]
authors:      ["David Kaloper Meršinjak <dk505@cam.ac.uk>"]
license:      "ISC"
homepage:     "https://github.com/pqwy/ocaml-papi"
doc:          "https://pqwy.github.io/ocaml-papi/doc"
dev-repo:     "git+https://github.com/pqwy/ocaml-papi.git"
bug-reports:  "https://github.com/pqwy/ocaml-papi/issues"
synopsis:     "Performance Application Programming Interface (PAPI) bindings"

build: [ [ "dune" "subst" ] {pinned}
         [ "dune" "build" "-p" name "-j" jobs ]
         [ "dune" "runtest" ] {with-test} ]

depends: [
  "ocamlfind" {build}
  "dune" {build & >= "1.7"}
  "fmt" {with-test} ]
description: """
Papi provides OCaml bindings to PAPI, a C library for portable access to
hardware performance counters.
"""
